mobile alignment issue fix 1

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -165,6 +165,7 @@
   font-size: 16px;
   display: flex;
   justify-content: space-evenly;
+  max-height: 25px;
 }
 
 .homeBlogIcon{
@@ -182,7 +183,12 @@
   font-size: 15px;
 
   svg{
+    margin: auto;
     margin-right: 4px;
+  }
+
+  span{
+    margin: auto;
   }
 }
 
